# kindle-env

./: .gitignore  .gitmodules  LICENSE.txt  README.md
examples/: portage-make.conf
kindle/etc/: hostname
oemeta/classes/: kindle-image.bbclass
oemeta/conf/: layer.conf
oemeta/conf/machine/: kindle-touch.conf  kindle-voyage.conf
oemeta/conf/machine/include/: imx50-common.inc
oemeta/files/additional-licenses/: ASL
oemeta/recipes-core/kollector/: kollector_git.bb
oemeta/recipes-core/openlipc/: openlipc_git.bb
oemeta/recipes-gui/ktterm/: ktterm_git.bb
oemeta/recipes-lab126/lipc/: lipc_0.0.0.bb
oemeta/recipes-lab126/lipc/files/: lipc-daemon-events.conf  lipc-daemon-props.conf
tools/collector/: Makefile  Makefile.am  README.md  configure.ac
tools/collector/src/: Makefile.am  find.c  find.h  kbooks.h  main.c  strrcmp.c  strrcmp.h
tools/ktterm/: Makefile  Makefile.am  README.md  configure.ac
tools/ktterm/share/: keyboard.cfg
tools/ktterm/src/: Makefile.am  keyboard.c  keyboard.h  ktpatch.c  ktterm.h  ktutils.c  ktutils.h  main.c
tools/openlipc/: Makefile.am  README.md  configure.ac
tools/openlipc/include/: openlipc.h
tools/openlipc/src/: Makefile.am  lipc-get-prop.c  lipc-probe.c  lipc-set-prop.c
